tests/ui/form_model/fail_tuple.stderr
error: FormModel derive requires a struct with named fields
 --> tests/ui/form_model/fail_tuple.rs:1:17
  |
1 | #[derive(Clone, calmui::form::FormModel)]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `calmui::form::FormModel` (in Nightly builds, run with -Z macro-backtrace for more info)
