tests/ui/form_model/fail_tuple.rs
#[derive(Clone, calmui::form::FormModel)]
struct TupleForm(String);

fn main() {}
